--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-///Rental Website Homepage
+<!-- Rental Website Homepage -->
+
+
+<html>
+
+<head>
+
+<title>INVENTORYNET</title>
+
+<link rel="stylesheet" type="text/css" href="styles.css">
+	
+
+	<table class="header" width="100%" cellpadding="8">
+	<tr>
+		<td><h1>INVENTORYNET</h1></td><td class="userconfig">Welcome, <?php $_SESSION["user_name"] ?></td><td class="userconfig">
+		<form method="post">
+		<button type="submit" class="button" name="logout" value="Logout">Logout</button></td>
+		</form>
+	</tr>
+
+</table>
+	
+	</head>
+
+<body>
+
+<br>
+
+<table class="branchselector" width="50%" height="80%" border="0" cellspacing="0">
+
+<tr class="header">
+<td><p><h1 class="centered">BRANCHES</h1></p></td>
+</tr>
