--- a/index.html
+++ b/index.html
@@ -1,28 +1,117 @@
 <!-- Rental Website Homepage -->
 
+		
 <!DOCTYPE html>
 <html lang="en">
+
+
+<!-- To ensure compatibility between different devices -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
 
 <title>Homepage</title>
 
-<link rel="stylesheet" type="text/css" href="styles.css">
-	
-
-	<table class="header" width="100%" cellpadding="8">
-		<tr>
-			<td><h1>Rental Service</h1></td><td>Welcome</td>
-		</tr>
-
-	</table>
+<link rel="stylesheet" type="text/css" href="style.css">
 	
 </head>
 
 <body>
 
+<header>
+
+<div class="banner_photo">
+	<div class="banner">
+		<div class="transparent_header"><a href="buy.html">Buy</a></div>
+		<div class="transparent_header"><a href="rent.html">Rent</a></div>
+		<div class="transparent_header"><a href="inq.html">Inquiries</a></div>
+		<div class="transparent_header"><a href="about.html">About Us</a></div>
+	</div>
+	<div class="headline">
+	<h1>Beta Real Estate</h1>
+	<h2>est. 2019</h2>
+	</div>
+</div>
+
+</header>
+
 <article>
-	<!-- Add homepage content here -->
+
+<!-- Main homepage content here -->
+
+<br/>
+<br/>
+<hr/>
+<br/>
+<p class="homepage_intro">
+	Finding your next home or commercial property begins with Beta Real Estate. 
+	We offer the best prices available on the market and provide an intuitive 
+	search experience with our unique website design.
+</p>
+<br/>
+<br/>
+<hr/>
+<br/>
+	
+<div class="homepage_box">
+
+<br/>
+<br/>	
+<p><h3>Offices &#183 Residences &#183 Industrial Parks &#183 Shops</h3></p>
+
+<table align="center" cellpadding="20">
+	<tr>
+		<td><img src="off_thumbnail.jpg" alt="Office" style="width: 270px; height: 180px;"></td>
+		<td><img src="liv_thumbnail.jpg" alt="Residences" style="width: 270px; height: 180px;"></td>
+	</tr>
+	<tr>
+		<td><img src="shop_thumbnail.jpg" alt="Shops" style="width: 270px; height: 180px;"></td>
+		<td><img src="ind_thumbnail.jpg" alt="Industrial Parks" style="width: 270px; height: 180px;"></td>
+	</tr>
+</table>
+<br/>
+<br/>
+
+</div>
+
 </article>
+
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+
+</body>
+
+<footer>
+
+<table cellpadding="5" style="color: white; margin-left: 30px;">
+<tr>
+	<th><br/> © Beta Real Estate Corporation Sdn Bhd</th>
+</tr>
+<tr>
+	<th>Regional Office</th><th>Hours:</th>
+</tr>
+<tr>
+	<td>
+		<p>
+			Jalan Simpang Tiga<br/>
+			93350 Kuching, Sarawak<br/> 
+			Malaysia<br/>
+		</p>
+	</td>
+	<td>
+		<p>
+			Mon-Fri: 9:00 am – 5:00 pm<br/>
+			Sat-Sun: 1:00 pm - 5:00 pm<br/>
+			Public holidays: Closed<br/>
+		</p>
+	</td>
+</tr>
+</table>
+</footer>
+
 
 </html>
