Start working guys
Homepage updated, new rent page created, template page created.

--- a/rent.html
+++ b/rent.html
@@ -10,7 +10,7 @@
 
 <head>
 
-<title>Homepage</title>
+<title>Rent Properties</title>
 
 <link rel="stylesheet" type="text/css" href="style.css">
 	
@@ -20,7 +20,7 @@
 
 <header>
 
-<div class="banner_photo" id="homepage_banner_photo">
+<div class="banner_photo" id="rent_banner_photo">
 	<div class="banner">
 		<div class="transparent_header"><a href="buy.html">Buy</a></div>
 		<div class="transparent_header"><a href="rent.html">Rent</a></div>
@@ -28,13 +28,7 @@
 		<div class="transparent_header"><a href="about.html">About Us</a></div>
 	</div>
 	<div class="headline">
-	<h1><hr/>Beta Real Estate<hr/></h1>
-		<div class="searchbox">
-			<form action="/action_page.php">
-				<input class="search_text" type="text" placeholder="Search for properties..." name="search">
-				<button class="search_button" type="submit"><i class="fa fa-search"></i></button>
-			</form>
-		</div>
+	<h1><hr/>Rent New Properties<hr/></h1>
 	</div>
 </div>
 
@@ -42,16 +36,14 @@
 
 <article>
 
-<!-- Main homepage content here -->
+<!-- Main product content here -->
 
 <br/>
 <br/>
 <hr/>
 <br/>
 <p class="page_intro">
-	Finding your next home or commercial property begins with Beta Real Estate. 
-	We offer the best prices available on the market and provide an intuitive 
-	search experience with our unique website design.
+	Properties for rent
 </p>
 <br/>
 <br/>
@@ -62,7 +54,18 @@
 
 <br/>
 <br/>	
-<p><h3>Homepage content</h3></p>
+<p><h3>Offices &#183 Residences &#183 Industrial Parks &#183 Shops</h3></p>
+
+<table align="center" cellpadding="20">
+	<tr>
+		<td><img src="off_thumbnail.jpg" alt="Office" style="width: 270px; height: 180px;"></td>
+		<td><img src="liv_thumbnail.jpg" alt="Residences" style="width: 270px; height: 180px;"></td>
+	</tr>
+	<tr>
+		<td><img src="shop_thumbnail.jpg" alt="Shops" style="width: 270px; height: 180px;"></td>
+		<td><img src="ind_thumbnail.jpg" alt="Industrial Parks" style="width: 270px; height: 180px;"></td>
+	</tr>
+</table>
 <br/>
 <br/>
 
