--- a/template.html
+++ b/template.html
@@ -10,7 +10,7 @@
 
 <head>
 
-<title>Homepage</title>
+<title>Rent Properties</title>
 
 <link rel="stylesheet" type="text/css" href="style.css">
 	
@@ -20,7 +20,9 @@
 
 <header>
 
-<div class="banner_photo" id="homepage_banner_photo">
+<!-- Change id to change banner photo. Leave the class alone. -->
+
+<div class="banner_photo" id="">
 	<div class="banner">
 		<div class="transparent_header"><a href="buy.html">Buy</a></div>
 		<div class="transparent_header"><a href="rent.html">Rent</a></div>
@@ -28,13 +30,8 @@
 		<div class="transparent_header"><a href="about.html">About Us</a></div>
 	</div>
 	<div class="headline">
-	<h1><hr/>Beta Real Estate<hr/></h1>
-		<div class="searchbox">
-			<form action="/action_page.php">
-				<input class="search_text" type="text" placeholder="Search for properties..." name="search">
-				<button class="search_button" type="submit"><i class="fa fa-search"></i></button>
-			</form>
-		</div>
+	<!-- Change this for different pages -->
+	<h1><hr/>Page Headline Here<hr/></h1>
 	</div>
 </div>
 
@@ -42,16 +39,14 @@
 
 <article>
 
-<!-- Main homepage content here -->
+<!-- Main content here -->
 
 <br/>
 <br/>
 <hr/>
 <br/>
 <p class="page_intro">
-	Finding your next home or commercial property begins with Beta Real Estate. 
-	We offer the best prices available on the market and provide an intuitive 
-	search experience with our unique website design.
+	**Page description here**
 </p>
 <br/>
 <br/>
@@ -62,7 +57,7 @@
 
 <br/>
 <br/>	
-<p><h3>Homepage content</h3></p>
+<p><h3>**Page content here**</h3></p>
 <br/>
 <br/>
 
