--- a/template.html
+++ b/template.html
@@ -24,10 +24,10 @@
 
 <div class="banner_photo" id="">
 	<div class="banner">
-		<div class="transparent_header"><a href="buy.html">Buy</a></div>
-		<div class="transparent_header"><a href="rent.html">Rent</a></div>
-		<div class="transparent_header"><a href="inq.html">Inquiries</a></div>
-		<div class="transparent_header"><a href="about.html">About Us</a></div>
+		<span class="transparent_header"><a class="banner_link" href="index.html">Home</a></span>
+		<span class="transparent_header"><a class="banner_link" href="rent.html">Rent</a></span>
+		<span class="transparent_header"><a class="banner_link" href="inq.html">Inquiries</a></span>
+		<span class="transparent_header"><a class="banner_link" href="about.html">About Us</a></span>
 	</div>
 	<div class="headline">
 	<!-- Change this for different pages -->
@@ -57,7 +57,7 @@
 
 <br/>
 <br/>	
-<p><h3>**Page content here**</h3></p>
+<p><h3 style="color: white;">**Page content here**</h3></p>
 <br/>
 <br/>
 
