--- a/index.html
+++ b/index.html
@@ -22,17 +22,18 @@
 
 <div class="banner_photo" id="homepage_banner_photo">
 	<div class="banner">
-		<div class="transparent_header"><a href="buy.html">Buy</a></div>
-		<div class="transparent_header"><a href="rent.html">Rent</a></div>
-		<div class="transparent_header"><a href="inq.html">Inquiries</a></div>
-		<div class="transparent_header"><a href="about.html">About Us</a></div>
+		<span class="transparent_header"><a class="banner_link" href="index.html">Home</a></span>
+		<span class="transparent_header"><a class="banner_link" href="rent.html">Rent</a></span>
+		<span class="transparent_header"><a class="banner_link" href="inq.html">Inquiries</a></span>
+		<span class="transparent_header"><a class="banner_link" href="about.html">About Us</a></span>
 	</div>
 	<div class="headline">
 	<h1><hr/>Beta Real Estate<hr/></h1>
 		<div class="searchbox">
+			<!-- Search function completely optional. PHP required -->
 			<form action="/action_page.php">
 				<input class="search_text" type="text" placeholder="Search for properties..." name="search">
-				<button class="search_button" type="submit"><i class="fa fa-search"></i></button>
+				<button class="search_button" type="submit"></button>
 			</form>
 		</div>
 	</div>
@@ -45,27 +46,73 @@
 <!-- Main homepage content here -->
 
 <br/>
+<hr/>
+<p><h3>Offices &#183 Residences &#183 Industrial Parks &#183 Shops</h3></p>
+<img class="intro_photos" src="ind_thumbnail.jpg">
+<img class="intro_photos" src="shop_thumbnail.jpg">
+<img class="intro_photos" src="off_thumbnail.jpg">
+<img class="intro_photos" src="liv_thumbnail.jpg">
 <br/>
 <hr/>
 <br/>
 <p class="page_intro">
 	Finding your next home or commercial property begins with Beta Real Estate. 
-	We offer the best prices available on the market and provide an intuitive 
-	search experience with our unique website design.
+	We offer the best prices available on the market in all thirteen states in 
+	Malaysia and provide an intuitive search experience with our unique website 
+	design.
 </p>
-<br/>
-<br/>
-<hr/>
 <br/>
 	
 <div class="content_box">
 
 <br/>
-<br/>	
-<p><h3>Homepage content</h3></p>
-<br/>
-<br/>
+<p><h3 style="color: white;">Latest Projects</h3></p>
 
+<!-- photocard links -->
+
+<a href="property1.html" class="showcase_box">
+<img src="penang.jpg" style="width: 300px; height: 200px;">
+<p style="color: black;">Small apartment<br/>Monthly rate: RM 1,300</p>
+</a>
+
+<a href="property2.html" class="showcase_box">
+<img src="penang.jpg" style="width: 300px; height: 200px;">
+<p style="color: black;">Medium apartment<br/>Monthly rate: RM 2,000</p>
+</a>
+
+<a href="property3.html" class="showcase_box">
+<img src="penang.jpg" style="width: 300px; height: 200px;">
+<p style="color: black;">Large apartment<br/>Monthly rate: RM 3,200</p>
+</a>
+
+<a href="property4.html" class="showcase_box">
+<img src="penang.jpg" style="width: 300px; height: 200px;">
+<p style="color: black;">Large apartment<br/>Monthly rate: RM 4,000</p>
+</a>
+
+<a href="property5.html" class="showcase_box">
+<img src="penang.jpg" style="width: 300px; height: 200px;">
+<p style="color: black;">This is a penang property</p>
+</a>
+
+<a href="property6.html" class="showcase_box">
+<img src="penang.jpg" style="width: 300px; height: 200px;">
+<p style="color: black;">This is a second penang property</p>
+</a>
+
+<a href="property7.html" class="showcase_box">
+<img src="penang.jpg" style="width: 300px; height: 200px;">
+<p style="color: black;">This is a third penang property</p>
+</a>
+
+<a href="property8.html" class="showcase_box">
+<img src="penang.jpg" style="width: 300px; height: 200px;">
+<p style="color: black;">This is a fourth penang property</p>
+</a>
+
+<!-- End of photocard links -->
+
+<br/><br/><br/><br/>
 </div>
 
 </article>
@@ -105,6 +152,7 @@
 	</td>
 </tr>
 </table>
+
 </footer>
 
 
