--- a/rent.html
+++ b/rent.html
@@ -22,10 +22,10 @@
 
 <div class="banner_photo" id="rent_banner_photo">
 	<div class="banner">
-		<div class="transparent_header"><a href="buy.html">Buy</a></div>
-		<div class="transparent_header"><a href="rent.html">Rent</a></div>
-		<div class="transparent_header"><a href="inq.html">Inquiries</a></div>
-		<div class="transparent_header"><a href="about.html">About Us</a></div>
+		<span class="transparent_header"><a class="banner_link" href="index.html">Home</a></span>
+		<span class="transparent_header"><a class="banner_link" href="rent.html">Rent</a></span>
+		<span class="transparent_header"><a class="banner_link" href="inq.html">Inquiries</a></span>
+		<span class="transparent_header"><a class="banner_link" href="about.html">About Us</a></span>
 	</div>
 	<div class="headline">
 	<h1><hr/>Rent New Properties<hr/></h1>
@@ -53,22 +53,48 @@
 <div class="content_box">
 
 <br/>
-<br/>	
-<p><h3>Offices &#183 Residences &#183 Industrial Parks &#183 Shops</h3></p>
+<p><h3 style="color: white;">Properties for You</h3></p>
 
-<table align="center" cellpadding="20">
-	<tr>
-		<td><img src="off_thumbnail.jpg" alt="Office" style="width: 270px; height: 180px;"></td>
-		<td><img src="liv_thumbnail.jpg" alt="Residences" style="width: 270px; height: 180px;"></td>
-	</tr>
-	<tr>
-		<td><img src="shop_thumbnail.jpg" alt="Shops" style="width: 270px; height: 180px;"></td>
-		<td><img src="ind_thumbnail.jpg" alt="Industrial Parks" style="width: 270px; height: 180px;"></td>
-	</tr>
-</table>
-<br/>
-<br/>
+<a href="property1.html" class="showcase_box">
+<img src="penang.jpg" style="width: 300px; height: 200px;">
+<p style="color: black;">Small apartment<br/>Monthly rate: RM 1,300</p>
+</a>
 
+<a href="property2.html" class="showcase_box">
+<img src="penang.jpg" style="width: 300px; height: 200px;">
+<p style="color: black;">Medium apartment<br/>Monthly rate: RM 2,000</p>
+</a>
+
+<a href="property3.html" class="showcase_box">
+<img src="penang.jpg" style="width: 300px; height: 200px;">
+<p style="color: black;">Large apartment<br/>Monthly rate: RM 3,200</p>
+</a>
+
+<a href="property4.html" class="showcase_box">
+<img src="penang.jpg" style="width: 300px; height: 200px;">
+<p style="color: black;">Large apartment<br/>Monthly rate: RM 4,000</p>
+</a>
+
+<a href="property5.html" class="showcase_box">
+<img src="penang.jpg" style="width: 300px; height: 200px;">
+<p style="color: black;">This is a penang property</p>
+</a>
+
+<a href="property6.html" class="showcase_box">
+<img src="penang.jpg" style="width: 300px; height: 200px;">
+<p style="color: black;">This is a second penang property</p>
+</a>
+
+<a href="property7.html" class="showcase_box">
+<img src="penang.jpg" style="width: 300px; height: 200px;">
+<p style="color: black;">This is a third penang property</p>
+</a>
+
+<a href="property8.html" class="showcase_box">
+<img src="penang.jpg" style="width: 300px; height: 200px;">
+<p style="color: black;">This is a fourth penang property</p>
+</a>
+<br/><br/><br/><br/>
 </div>
 
 </article>
