Enquiry page updated

--- a/enquiry.html
+++ b/enquiry.html
@@ -10,7 +10,7 @@
 
 <head>
 
-<title>Rent Properties</title>
+<title>Enquiry</title>
 
 <link rel="stylesheet" type="text/css" href="style.css">
 	
@@ -70,12 +70,12 @@ div.content_box {
 	<div class="banner">
 		<span class="transparent_header"><a class="banner_link" href="index.html">Home</a></span>
 		<span class="transparent_header"><a class="banner_link" href="rent.html">Rent</a></span>
-		<span class="transparent_header"><a class="banner_link" href="inq.html">Inquiries</a></span>
+		<span class="transparent_header"><a class="banner_link" href="enquiry.html">Enquiry</a></span>
 		<span class="transparent_header"><a class="banner_link" href="about.html">About Us</a></span>
 	</div>
 	<div class="headline">
 	<!-- Change this for different pages -->
-	<h1><hr/>Have an inquiry?<hr/></h1>
+	<h1><hr/>Have an enquiry?<hr/></h1>
 	</div>
 </div>
 
@@ -85,24 +85,25 @@ div.content_box {
 
 <!-- Main content here -->
 
+<br/>
+<br/>
+<br/>
+<br/> 
+<br/>
 
-	
 <div class="content_box">
 
 <br/>
 <p><h3 style="color: white;">Send us a message!</h3></p>
 
 <div>
-    <input type="text" id="fname" name="fullname" placeholder="Full name">
-
-    <input type="text" id="email" name="email" placeholder="E-mail">
-	
-	<input type="text" id="phone" name="phone" placeholder="Phone">
-	
-	<input type="message" id="message" name="inquiry" placeholder="Your inquiry">
-	
-    <input type="submit" value="Submit">
-  </form>
+	<form>
+		<input type="text" id="fname" name="fullname" placeholder="Full name">
+		<input type="text" id="email" name="email" placeholder="E-mail">		
+		<input type="text" id="phone" name="phone" placeholder="Phone">		
+		<input type="message" id="message" name="enquiry" placeholder="Your enquiry">		
+		<input type="submit" value="Submit">
+	</form>
 </div>
 
 
