--- a/aboutme1.html
+++ b/aboutme1.html
@@ -2,7 +2,7 @@
 <html >
   <head>
     <meta charset="UTF-8">
-    <title>Pure CSS Profile Card Hover Effect</title>
+    <title>Ryan Then</title>
 
         <link rel="stylesheet" href="style.css">
   </head>
