Added 1st set of images

--- a/aboutme3.html
+++ b/aboutme3.html
@@ -20,7 +20,7 @@
 
     <div class="container">
   <div class="avatar-flip">
-    <img src=".jpg" alt="Ryanthen" height="150" width="150">
+    <img src="members/Jonathan.jpeg" alt="Ryanthen" height="150" width="150">
     <img src=".gif~original" alt="Flipimg" height="150" width="150">
   </div>
   <h2 id="aboutmeh2">Jonathan Embas</h2>
@@ -35,8 +35,6 @@
   <tr class = "Contributiontr">
     <td class= "Contributiontd">2. </td>
 </table>
-  <p id="aboutmep">Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Maecenas sed diam eget risus varius blandit sit amet non magna ip sum dolore.</p>
-  <p id="aboutmep">Connec dolore ipsum faucibus mollis interdum. Donec ullamcorper nulla non metus auctor fringilla.</p>
   <p id="studentid">StudentID: 100086699</p>
 
 </div>
