Added flip photos

--- a/aboutme1.html
+++ b/aboutme1.html
@@ -21,7 +21,7 @@
     <div class="container">
   <div class="avatar-flip">
     <img src="members/Ryan.jpeg" alt="Ryanthen" height="150" width="150">
-    <img src=".gif~original" alt="Flipimg" height="150" width="150">
+    <img src="members/Ryan2.jpeg" alt="Flipimg" height="150" width="150">
   </div>
   <h2 id="aboutmeh2">Ryan Then</h2>
   <h4 id="aboutmeh4">Computer Science</h4>
@@ -35,6 +35,12 @@
   <tr class = "Contributiontr">
     <td class= "Contributiontd">2. </td>
 </table>
+  <p id="aboutmep">It could also include personal profile, such as resume, interests, or information that is related to you.</p>
+  <p id="aboutmep">This extra information gives you an opportunity to extend the techniques you apply in your
+  assignment, and could include:
+  • Demographic information about you
+  • Description of hometown
+  • A list of your favourite books, music, films etc.</p>
   <p id="studentid">StudentID: 100086699</p>
 
 </div>
