--- a/aboutme4.html
+++ b/aboutme4.html
@@ -2,7 +2,7 @@
 <html >
   <head>
     <meta charset="UTF-8">
-    <title>Jeffrey Sia</title>
+    <title>Jeffery Sia</title>
 
         <link rel="stylesheet" href="style.css">
   </head>
@@ -23,7 +23,7 @@
     <img src="members/Jeffrey.jpeg" alt="Jeffrey Sia" height="150" width="150">
     <img src="members/Jeffrey.jpeg" alt="Flipimg" height="150" width="150">
   </div>
-  <h2 id="aboutmeh2">Jeffrey Sia</h2>
+  <h2 id="aboutmeh2">Jeffery Sia</h2>
   <h4 id="aboutmeh4">Computer Science</h4>
   <table class="Contributiontable">
   <tr class = "Contributiontr">
@@ -41,12 +41,12 @@ assignment, and could include:
 • Demographic information about you
 • Description of hometown
 • A list of your favourite books, music, films etc.</p>
-  <p id="studentid">StudentID: 100086699</p>
+  <p id="studentid">StudentID: 101216138</p>
 
 </div>
   </div>
   <footer>
-    <p id="email_foot">Contact information: <a href="mailto:100086699@students.swinburne.edu.my">100086699@students.swinburne.edu.my</a>.</p>
+    <p id="email_foot">Contact information: <a href="mailto:101216138@students.swinburne.edu.my">101216138@students.swinburne.edu.my</a>.</p>
   <table cellpadding="5" style="color: white; margin-left: 30px;">
   <tr>
   	<th><br/> © Beta Real Estate Corporation Sdn Bhd</th>
