--- a/aboutme4.html
+++ b/aboutme4.html
@@ -20,8 +20,8 @@
 
     <div class="container">
   <div class="avatar-flip">
-    <img src="members/Jeffrey.jpeg" alt="Jeffrey Sia" height="150" width="150">
-    <img src="members/Jeffrey.jpeg" alt="Flipimg" height="150" width="150">
+    <img src="members/Jeffery.jpeg" alt="Jeffery" height="150" width="150">
+    <img src="members/Jeffery.jpeg" alt="Flipimg" height="150" width="150">
   </div>
   <h2 id="aboutmeh2">Jeffery Sia</h2>
   <h4 id="aboutmeh4">Computer Science</h4>
