--- a/disclaimer.html
+++ b/disclaimer.html
@@ -40,19 +40,19 @@
 <br/>
 <br/>
 <br/>
-<p>
+<p class=disclaimer>
 	This website is created mainly for educational and non-commercial use only. It is a partial fulfilment for completion of unit COS10011 - Creating Web Applications offered in Swinburne University of Technology, Sarawak Campus for Semester 1, 2019. 
 </p></br>
 
-<p>
+<p class=disclaimer>
 	The web-master and author(s) do not represent the business entity. 
 </p></br>
 
-<p>
+<p class=disclaimer>
 	The content of the pages of this website might be out-dated or inaccurate, thus, the author(s) and web-master does not take any responsibility for incorrect information disseminate or cited from this website.  
 </p></br>
 
-<p>
+<p class=disclaimer>
 	If you believe that information of any kind on this website is an infringement of copyright in material in which you either own copyright or are authorized to exercise the rights of a copyright owner, kindly contact the web-master (<a href="mailto:100086699@students.swinburne.edu.my">100086699@students.swinburne.edu.my</a>) for removal.
 </p></br>
 <br/>
