--- a/disclaimer.html
+++ b/disclaimer.html
@@ -53,7 +53,7 @@
 </p></br>
 
 <p class=disclaimer>
-	If you believe that information of any kind on this website is an infringement of copyright in material in which you either own copyright or are authorized to exercise the rights of a copyright owner, kindly contact the web-master (<a href="mailto:100086699@students.swinburne.edu.my">100086699@students.swinburne.edu.my</a>) for removal.
+	If you believe that information of any kind on this website is an infringement of copyright in material in which you either own copyright or are authorized to exercise the rights of a copyright owner, kindly contact the web-master (<a id="webmaster_email" href="mailto:100086699@students.swinburne.edu.my">100086699@students.swinburne.edu.my</a>) for removal.
 </p></br>
 <br/>
 <br/>
