--- a/aboutme4.html
+++ b/aboutme4.html
@@ -21,7 +21,7 @@
     <div class="container">
   <div class="avatar-flip">
     <img src="members/Jeffery.jpeg" alt="Jeffery" height="150" width="150">
-    <img src="members/Jeffery.jpeg" alt="Flipimg" height="150" width="150">
+    <img src="members/Jeffery2.jpeg" alt="Flipimg" height="150" width="150">
   </div>
   <h2 id="aboutmeh2">Jeffery Sia</h2>
   <h4 id="aboutmeh4">Computer Science</h4>
