--- a/disclaimer.html
+++ b/disclaimer.html
@@ -19,7 +19,7 @@
 
 <!-- Change id to change banner photo. Leave the class alone. -->
 
-<div class="banner_photo" id="">
+<div class="banner_photo" id="homepage_banner_photo">
 	<div class="banner">
 		<span class="transparent_header"><a class="banner_link" href="index.html">Home</a></span>
 		<span class="transparent_header"><a class="banner_link" href="rent.html">Rent</a></span>
