Multiple changes. Most pages updated with new banner

--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!-- Rental Website Homepage -->
 
-		
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,16 +10,15 @@
 
 <head>
 
-<title>Enquiry</title>
+<title>About Us</title>
 
 <link rel="stylesheet" type="text/css" href="style.css">
 
 <link rel="icon" type="image/x-icon" href="favicon.ico" />
-	
+
 </head>
 
 <body>
-
 
 <!-- Change id to change banner photo. Leave the class alone. -->
 
@@ -27,12 +26,12 @@
 	<div class="menu_banner">
 			<a href="index.html">Home</a>
 			<a href="product.html">Products</a>
-			<a id="active" href="enquiry.html">Enquiries</a>
-			<a class="menu_about" href="about.html">About Us</a>
+			<a href="enquiry.html">Enquiries</a>
+			<a id="active" class="menu_about" href="about.html">About Us</a>
 	</div>
 	<span class="headline">
 	<!-- Change this for different pages -->
-	<h1>Have an enquiry?</h1>
+	<h1>About Us</h1>
 	</span>
 </header>
 
@@ -42,26 +41,40 @@
 
 <br/>
 <br/>
+<hr/>
 <br/>
-<br/> 
+<p class="page_intro">
+	We are a popular renting platform focusing on property and real estate rentals. Below you will find further details about our members.
+</p>
+<br/>
+<br/>
+<hr/>
 <br/>
 
 <div class="content_box">
 
 <br/>
-<p><h3 style="color: white;">Send us a message!</h3></p>
+<br/>
+<p><h3 style="color: white;">Members</h3></p>
+<a href="aboutme1.html" class="showcase_box">
+<img src=".jpg" style="width: 300px; height: 200px;">
+<p style="color: black;">Ryan Then<br/>Team Leader</p>
+</a>
 
-<div>
-	<form>
-		<input type="text" id="fname" name="fullname" placeholder="Full name">
-		<input type="text" id="email" name="email" placeholder="E-mail">		
-		<input type="text" id="phone" name="phone" placeholder="Phone">		
-		<input type="message" id="message" name="enquiry" placeholder="Your enquiry">		
-		<input type="submit" value="Submit">
-	</form>
-</div>
+<a href="aboutme2.html" class="showcase_box">
+<img src=".jpg" style="width: 300px; height: 200px;">
+<p style="color: black;">Alex Haider Abedin<br/>Team Member</p>
+</a>
 
+<a href="aboutme3.html" class="showcase_box">
+<img src=".jpg" style="width: 300px; height: 200px;">
+<p style="color: black;">Jonathan Embas<br/>Team Member</p>
+</a>
 
+<a href="aboutme4.html" class="showcase_box">
+<img src=".jpg" style="width: 300px; height: 200px;">
+<p style="color: black;">Jeffrey Sia<br/>Team Member</p>
+</a>
 <br/>
 <br/>
 
@@ -91,7 +104,7 @@
 	<td>
 		<p>
 			Jalan Simpang Tiga<br/>
-			93350 Kuching, Sarawak<br/> 
+			93350 Kuching, Sarawak<br/>
 			Malaysia<br/>
 		</p>
 	</td>
