--- a/aboutme4.html
+++ b/aboutme4.html
@@ -35,7 +35,7 @@
   <tr class = "Contributiontr">
     <td class= "Contributiontd">2. </td>
 </table>
-<p id="aboutmep">It could also include personal profile, such as resume, interests, or information that is related to you.</p>
+<p id="aboutmep">A boy with average height from Sibu, Sarawak, Malaysia.</p>
 <p id="aboutmep">This extra information gives you an opportunity to extend the techniques you apply in your
 assignment, and could include:
 • Demographic information about you
