Product pages created
fill in each of your product pages accordingly

--- a/aboutus.html
+++ b/aboutus.html
@@ -58,22 +58,22 @@
 <br/>
 <br/>
 <p><h3 style="color: white;">Members</h3></p>
-<a href="aboutme1.html" class="showcase_box">
+<a href="aboutme1.html" class="showcase_card">
 <img src="members/Ryan.jpeg" style="width: 300px; height: 200px;">
 <p style="color: black;">Ryan Then<br/>Team Leader</p>
 </a>
 
-<a href="aboutme2.html" class="showcase_box">
+<a href="aboutme2.html" class="showcase_card">
 <img src="members/Alex.jpeg" style="width: 300px; height: 200px;">
 <p style="color: black;">Alex Haider Abedin<br/>Team Member</p>
 </a>
 
-<a href="aboutme3.html" class="showcase_box">
+<a href="aboutme3.html" class="showcase_card">
 <img src="members/Jonathan.jpeg" style="width: 300px; height: 200px;">
 <p style="color: black;">Jonathan Embas<br/>Team Member</p>
 </a>
 
-<a href="members/Jeffery.jpeg" class="showcase_box">
+<a href="members/Jeffery.jpeg" class="showcase_card">
 <img src=".jpg" style="width: 300px; height: 200px;">
 <p style="color: black;">Jeffrey Sia<br/>Team Member</p>
 </a>
