--- a/enquiry.html
+++ b/enquiry.html
@@ -23,7 +23,7 @@
 
 <!-- Change id to change banner photo. Leave the class alone. -->
 
-<header class="banner_photo" id="inquiry_banner_photo">
+<header class="banner_photo" id="enquiry_banner_photo">
 	<div class="menu_banner">
 			<a href="index.html">Home</a>
 			<a href="product.html">Products</a>
