--- a/product.html
+++ b/product.html
@@ -20,7 +20,7 @@
 
 <body>
 
-<header class="banner_photo" id="rent_banner_photo">
+<header class="banner_photo" id="product_banner_photo">
 	<div class="menu_banner">
 			<a href="index.html">Home</a>
 			<a id="active" href="product.html">Products</a>
