--- a/aboutme4.html
+++ b/aboutme4.html
@@ -5,17 +5,24 @@
     <title>Jeffery Sia</title>
 
         <link rel="stylesheet" href="style.css">
+		<link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
 
   <div class="aboutmebody">
 
 
-    	<div class="banner">
-    		<span class="transparent_header"><a class="banner_link" href="index.html">Home</a></span>
-    		<span class="transparent_header"><a class="banner_link" href="rent.html">Rent</a></span>
-    		<span class="transparent_header"><a class="banner_link" href="inq.html">Inquiries</a></span>
-    		<span class="transparent_header"><a class="banner_link" href="about.html">About Us</a></span>
-    	</div>
+<header class="banner_photo" id="inquiry_banner_photo">
+	<div class="menu_banner">
+			<a href="index.html">Home</a>
+			<a href="product.html">Products</a>
+			<a href="enquiry.html">Enquiries</a>
+			<a id="active" class="menu_about" href="about.html">About Us</a>
+	</div>
+	<span class="headline">
+	<!-- Change this for different pages -->
+	<h1>About Us</h1>
+	</span>
+</header>
 
 
     <div class="container">
@@ -35,7 +42,7 @@
   <tr class = "Contributiontr">
     <td class= "Contributiontd">2. </td>
 </table>
-<p id="aboutmep">A boy with average height from Sibu, Sarawak, Malaysia.</p>
+<p id="aboutmep">A boy with average height from Sibu, Sarawak, Malaysia. Likes to play games.</p>
 <p id="aboutmep">This extra information gives you an opportunity to extend the techniques you apply in your
 assignment, and could include:
 • Demographic information about you
