--- a/offices.html
+++ b/offices.html
@@ -10,7 +10,7 @@
 
 <head>
 
-<title>Apartments</title>
+<title>Offices</title>
 
 <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -43,73 +43,50 @@
 <div class="content_box">
 
 <br/>
-<h3>Apartments</h3>
+<h3>Offices</h3>
 
 <!-- photocard links -->
 
 <a href="property1.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
+<img src="offices/small_internal.jpeg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
-	<h4>Small apartment</h4>
+	<h4>Small internal office</h4>
 	<p>Monthly rate: RM 1,300</p>
 </div>
 </a>
 
 <a href="property2.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
+<img src="offices/medium_internal.jpeg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
-	<h4>Medium apartment</h4>
+	<h4>Medium internal office</h4>
 	<p>Monthly rate: RM 2,000</p>
 </div>
 </a>
 
 <a href="property3.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
+<img src="offices/small_window.jpeg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
-	<h4>Large apartment</h4>
+	<h4>Small window office</h4>
 	<p>Monthly rate: RM 3,200</p>
 </div>
 </a>
 
 <a href="property4.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
+<img src="offices/medium_window.jpeg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
-	<h4>Exclusive apartment</h4>
+	<h4>Medium window office</h4>
 	<p>Monthly rate: RM 4,000</p>
 </div>
 </a>
 
 <a href="property5.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
+<img src="offices/large_window.jpeg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
-	<p>Large apartment</p>
+	<h4>Large window office</h4>
 	<p>Monthly rate: RM 4,000</p>
 </div>
 </a>
 
-<a href="property6.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
-<div class="showcase_text">
-	<p>Large apartment</p>
-	<p>Monthly rate: RM 4,000</p>
-</div>
-</a>
-
-<a href="property7.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
-<div class="showcase_text">
-	<p>Large apartment</p>
-	<p>Monthly rate: RM 4,000</p>
-</div>
-</a>
-
-<a href="property8.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
-<div class="showcase_text">
-	<p>Large apartment</p>
-	<p>Monthly rate: RM 4,000</p>
-</div>
-</a>
 
 <!-- End of photocard links -->
 
