--- a/offices.html
+++ b/offices.html
@@ -47,43 +47,82 @@
 
 <!-- photocard links -->
 
-<a href="property1.html" class="showcase_card">
+<a href="property1.html" class="showcase_card_offices">
 <img src="offices/small_internal.jpeg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
 	<h4>Small internal office</h4>
-	<p>Monthly rate: RM 1,300</p>
+	<ul>
+		<li>Monthly rate: RM 800</li>
+		<li>Fitted office suite for small sized business</li>
+		<li>WiFi provided</li>
+		<li>Work areas with essential office stationaries and mechines</li>
+		<li>Daily office cleaning services</li>
+		<li>24×7 access and tight security with CCTV surveillance</li>
+	</ul>
 </div>
 </a>
 
-<a href="property2.html" class="showcase_card">
+<a href="property2.html" class="showcase_card_offices">
 <img src="offices/medium_internal.jpeg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
 	<h4>Medium internal office</h4>
-	<p>Monthly rate: RM 2,000</p>
+	<ul>
+		<li>Monthly rate: RM 1,100</li>
+		<li>Fitted office suite for small or mid sized business</li>
+		<li>WiFi provided</li>
+		<li>Work areas with essential office stationaries and mechines</li>
+		<li>Daily office cleaning services</li>
+		<li>24×7 access and tight security with CCTV surveillance</li>
+		<li>Cosy pantry areas with free drinks</li>
+	</ul>
 </div>
 </a>
 
-<a href="property3.html" class="showcase_card">
+<a href="property3.html" class="showcase_card_offices">
 <img src="offices/small_window.jpeg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
 	<h4>Small window office</h4>
-	<p>Monthly rate: RM 3,200</p>
+	<ul>
+		<li>Monthly rate: RM 1,000</li>
+		<li>Fitted office suite for small sized business</li>
+		<li>WiFi provided</li>
+		<li>Work areas with essential office stationaries and mechines</li>
+		<li>Daily office cleaning services</li>
+		<li>24×7 access and tight security with CCTV surveillance</li>
+	</ul>
 </div>
 </a>
 
-<a href="property4.html" class="showcase_card">
+<a href="property4.html" class="showcase_card_offices">
 <img src="offices/medium_window.jpeg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
 	<h4>Medium window office</h4>
-	<p>Monthly rate: RM 4,000</p>
+	<ul>
+		<li>Monthly rate: RM 1,500</li>
+		<li>Fitted office suite for small or mid sized business</li>
+		<li>WiFi provided</li>
+		<li>Work areas with essential office stationaries and mechines</li>
+		<li>Daily office cleaning services</li>
+		<li>24×7 access and tight security with CCTV surveillance</li>
+		<li>Cosy pantry areas with free drinks</li>
+	</ul>
 </div>
 </a>
 
-<a href="property5.html" class="showcase_card">
+<a href="property5.html" class="showcase_card_offices">
 <img src="offices/large_window.jpeg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
 	<h4>Large window office</h4>
-	<p>Monthly rate: RM 4,000</p>
+	<ul>
+		<li>Monthly rate: RM 2,000</li>
+		<li>Fitted office suite for mid or large sized business</li>
+		<li>WiFi provided</li>
+		<li>Work areas with essential office stationaries and mechines</li>
+		<li>Daily office cleaning services</li>
+		<li>24×7 access and tight security with CCTV surveillance</li>
+		<li>Cosy pantry areas with free drinks</li>
+		<li>Restrooms with shower facility</li>
+	</ul>
 </div>
 </a>
 
