--- a/product.html
+++ b/product.html
@@ -79,7 +79,7 @@
 	<img src="penang.jpg" style="width: 300px; height: 200px;">
 	<div class="product_text">
 	Choose from a list of stylish new
-	apartments to call your new home
+	offices to call your new work area
 	</div>
 	</a>
 	<a href="shops.html" class="product_card">
