Global changes and rearrangement of photos

--- a/about.html
+++ b/about.html
@@ -22,11 +22,19 @@
 
 <!-- Change id to change banner photo. Leave the class alone. -->
 
-<header class="banner_photo" id="inquiry_banner_photo">
+<header class="banner_photo" id="homepage_banner_photo">
 	<div class="menu_banner">
 			<a href="index.html">Home</a>
-			<a href="product.html">Products</a>
 			<a href="enquiry.html">Enquiries</a>
+			<div class="dropdown">
+				<a class="dropdown_link" href="product.html">Products</a>
+				<div class="dropdown-content">
+					<a href="apartments.html">Apartments</a>
+					<a href="houses.html">Houses</a>
+					<a href="offices.html">Offices</a>
+					<a href="shops.html">Shops</a>
+				</div>
+			</div>
 			<a id="active" class="menu_about" href="about.html">About Us</a>
 	</div>
 	<span class="headline">
@@ -50,35 +58,30 @@
 <br/>
 <hr/>
 <br/>
-
-<div class="content_box">
-
 <br/>
 <br/>
-<p><h3 style="color: white;">Members</h3></p>
-<a href="aboutme1.html" class="showcase_box">
+<p><h3>Members</h3></p>
+<a href="aboutme1.html" class="showcase_card">
 <img src=".jpg" style="width: 300px; height: 200px;">
 <p style="color: black;">Ryan Then<br/>Team Leader</p>
 </a>
 
-<a href="aboutme2.html" class="showcase_box">
+<a href="aboutme2.html" class="showcase_card">
 <img src=".jpg" style="width: 300px; height: 200px;">
 <p style="color: black;">Alex Haider Abedin<br/>Team Member</p>
 </a>
 
-<a href="aboutme3.html" class="showcase_box">
+<a href="aboutme3.html" class="showcase_card">
 <img src=".jpg" style="width: 300px; height: 200px;">
 <p style="color: black;">Jonathan Embas<br/>Team Member</p>
 </a>
 
-<a href="aboutme4.html" class="showcase_box">
+<a href="aboutme4.html" class="showcase_card">
 <img src=".jpg" style="width: 300px; height: 200px;">
 <p style="color: black;">Jeffrey Sia<br/>Team Member</p>
 </a>
 <br/>
 <br/>
-
-</div>
 
 </article>
 
