--- a/disclaimer.html
+++ b/disclaimer.html
@@ -16,26 +16,21 @@
 <body>
 
 <header>
-
-<!-- Change id to change banner photo. Leave the class alone. -->
-
-<div class="banner_photo" id="homepage_banner_photo">
-	<div class="banner">
-		<span class="transparent_header"><a class="banner_link" href="index.html">Home</a></span>
-		<span class="transparent_header"><a class="banner_link" href="rent.html">Rent</a></span>
-		<span class="transparent_header"><a class="banner_link" href="inq.html">Inquiries</a></span>
-		<span class="transparent_header"><a class="banner_link" href="about.html">About Us</a></span>
+	<div class="menu_banner">
+			<a href="index.html">Home</a>
+			<a id="active" href="product.html">Products</a>
+			<a href="enquiry.html">Enquiries</a>
+			<a class="menu_about" href="about.html">About Us</a>
 	</div>
-	<div class="headline">
-	<!-- Change this for different pages -->
-	<h1><hr/>Disclaimer<hr/></h1>
-	</div>
-</div>
-
 </header>
 
 <article>
-
+<br/>
+<br/>
+<br/>
+<br/>
+<div class="content_box">
+<h3>Disclaimer</h3>
 <br/>
 <br/>
 <br/>
@@ -59,6 +54,7 @@
 <br/>
 <br/>
 <br/>
+</div>
 
 </article>	
 
