--- a/enquiry.html
+++ b/enquiry.html
@@ -26,8 +26,16 @@
 <header class="banner_photo" id="enquiry_banner_photo">
 	<div class="menu_banner">
 			<a href="index.html">Home</a>
-			<a href="product.html">Products</a>
 			<a id="active" href="enquiry.html">Enquiries</a>
+			<div class="dropdown">
+				<a class="dropdown_link" href="product.html">Products</a>
+				<div class="dropdown-content">
+					<a href="apartments.html">Apartments</a>
+					<a href="houses.html">Houses</a>
+					<a href="offices.html">Offices</a>
+					<a href="shops.html">Shops</a>
+				</div>
+			</div>
 			<a class="menu_about" href="about.html">About Us</a>
 	</div>
 	<span class="headline">
