--- a/index.html
+++ b/index.html
@@ -23,8 +23,16 @@
 <header class="banner_photo" id="homepage_banner_photo">
 	<div class="menu_banner">
 			<a id="active" href="index.html">Home</a>
-			<a href="product.html">Products</a>
 			<a href="enquiry.html">Enquiries</a>
+			<div class="dropdown">
+				<a class="dropdown_link" href="product.html">Products</a>
+				<div class="dropdown-content">
+					<a href="apartments.html">Apartments</a>
+					<a href="houses.html">Houses</a>
+					<a href="offices.html">Offices</a>
+					<a href="shops.html">Shops</a>
+				</div>
+			</div>
 			<a class="menu_about" href="about.html">About Us</a>
 	</div>
 	<span class="headline">
@@ -57,12 +65,12 @@
 <div class="content_box">
 
 <br/>
-<h3>Latest Projects</h3>
+<div style="background-color: #2F8DCD;"><h3>Latest Projects</h3></div>
 
 <!-- photocard links -->
 
 <a href="property1.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
+<img src="images/penang.jpg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
 	<h4>Small apartment</h4>
 	<p>Monthly rate: RM 1,300</p>
