--- a/product.html
+++ b/product.html
@@ -23,8 +23,16 @@
 <header class="banner_photo" id="product_banner_photo">
 	<div class="menu_banner">
 			<a href="index.html">Home</a>
-			<a id="active" href="product.html">Products</a>
 			<a href="enquiry.html">Enquiries</a>
+			<div class="dropdown">
+				<a class="dropdown_link" id="active" href="product.html">Products</a>
+				<div class="dropdown-content">
+					<a href="apartments.html">Apartments</a>
+					<a href="houses.html">Houses</a>
+					<a href="offices.html">Offices</a>
+					<a href="shops.html">Shops</a>
+				</div>
+			</div>
 			<a class="menu_about" href="about.html">About Us</a>
 	</div>
 	<span class="headline">
@@ -97,7 +105,7 @@
 <div class="content_box">
 
 <br/>
-<p><h3 style="color: white;">Properties For You</h3></p>
+<h3>Properties For You</h3>
 
 <!-- photocard links -->
 
