--- a/aboutme1.html
+++ b/aboutme1.html
@@ -12,17 +12,21 @@
   <div class="aboutmebody">
 
 
-<header class="banner_photo" id="inquiry_banner_photo">
+<header>
 	<div class="menu_banner">
 			<a href="index.html">Home</a>
-			<a href="product.html">Products</a>
 			<a href="enquiry.html">Enquiries</a>
-			<a id="active" class="menu_about" href="about.html">About Us</a>
+			<div class="dropdown">
+				<a class="dropdown_link" href="product.html">Products</a>
+				<div class="dropdown-content">
+					<a href="apartments.html">Apartments</a>
+					<a href="houses.html">Houses</a>
+					<a href="offices.html">Offices</a>
+					<a href="shops.html">Shops</a>
+				</div>
+			</div>
+			<a class="menu_about" id="active"  href="about.html">About Us</a>
 	</div>
-	<span class="headline">
-	<!-- Change this for different pages -->
-	<h1>About Us</h1>
-	</span>
 </header>
 
 
