small adjustments to offices page

--- a/offices.html
+++ b/offices.html
@@ -23,10 +23,17 @@
 <header>
 	<div class="menu_banner">
 			<a href="index.html">Home</a>
-			<a id="active" href="product.html">Products</a>
 			<a href="enquiry.html">Enquiries</a>
-			<a class="menu_about" href="about.html">About Us</a>
-	</div>
+			<div class="dropdown">
+				<a id="active" class="dropdown_link" href="product.html">Products</a>
+				<div class="dropdown-content">
+					<a href="apartments.html">Apartments</a>
+					<a href="houses.html">Houses</a>
+					<a href="offices.html">Offices</a>
+					<a href="shops.html">Shops</a>
+				</div>
+			</div>
+			<a class="menu_about"  href="about.html">About Us</a>
 </header>
 
 <article>
@@ -112,7 +119,7 @@
 <a href="property5.html" class="showcase_card_offices">
 <img src="offices/large_window.jpeg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
-	<h4>Large window office</h4>
+<h4>Large window office</h4>
 	<ul>
 		<li>Monthly rate: RM 2,000</li>
 		<li>Fitted office suite for mid or large sized business</li>
